@@ -27,7 +27,7 @@
         
         <!--  If this is too much memory to allocate to your gwt:debug process then override this property in
               in your settings.xml -->
-        <gwt-plugin.extraJvmArgs>-Xms512M -Xmx512M</gwt-plugin.extraJvmArgs>
+        <gwt-plugin.extraJvmArgs>-Xms512M -Xmx512M -XX:PermSize=128M -XX:MaxPermSize=256M</gwt-plugin.extraJvmArgs>
         <gwt-plugin.localWorkers>2</gwt-plugin.localWorkers>
     </properties>
 
